--- a/app/templates/noah.html
+++ b/app/templates/noah.html
@@ -16,7 +16,7 @@
 {% endblock %}
 
 {% block first %}
-<div class="project-image weather-image"></div>
+<img src="../static/img/project-images/weather-app.jpg" alt="weather app image" class="project-image">
 <h3>
     Weather App
 </h3>
@@ -29,7 +29,7 @@
 {% endblock %}
 
 {% block second %}
-<div class="project-image simonsays-image"></div>
+<img src="../static/img/project-images/simon-says.jpg" alt="weather app image" class="project-image">
 <h3>
     Simon Says
 </h3>
