--- a/app/templates/home.html
+++ b/app/templates/home.html
@@ -35,7 +35,7 @@
                 <h1>Juan</h1>
                 <img src="../static/img/juanprofile.jpg" alt="juan">
                 <br>
-                <div class="button">
+                <div class="button" style="--button-color: rgb(151, 17, 253)">
                     <a href="/member/juan">Learn more!</a>
                 </div>
             </div>
@@ -43,7 +43,7 @@
                 <h1>Malik</h1>
                 <img src="../static/img/malikprofile.jpg" alt="malik">
                 <br>
-                <div class="button">
+                <div class="button" style="--button-color: rgb(253, 162, 17)">
                     <a href="/member/malik">Learn more!</a>
                 </div>
             </div>
@@ -51,7 +51,7 @@
                 <h1>Noah</h1>
                 <img src="../static/img/noahprofile.jpg" alt="noah">
                 <br>
-                <div class="button">
+                <div class="button" style="--button-color: rgb(49, 138, 254)">
                     <a href="/member/noah">Learn more!</a>
                 </div>
             </div>
