--- a/app/templates/home.html
+++ b/app/templates/home.html
@@ -29,7 +29,7 @@
         </div>
     </header>
     <div class="container">
-        <img src="../static/img/boisterous_baboons.png" class="baboon">
+        <img src="../static/img/baboons.jpg" class="baboon">
         <div class="home-profile">
             <div class="person">
                 <h1>Juan</h1>
