--- a/app/templates/profilebase.html
+++ b/app/templates/profilebase.html
@@ -15,6 +15,7 @@
         rel="stylesheet">
 
     <link lang='sass' rel="stylesheet" href="../static/styles/main.css">
+    <link rel="stylesheet" href="../static/styles/skills.css">
     <link rel="stylesheet" href="https://unpkg.com/leaflet@1.8.0/dist/leaflet.css"
         integrity="sha512-hoalWLoI8r4UszCkZ5kL8vayOGVae1oxXe/2A4AO6J9+580uKHDO3JdHb7NzwwzK5xr/Fs0W40kiNHxM9vyTtQ=="
         crossorigin="" />
@@ -124,6 +125,16 @@
                 <p>
                     Tech Lead
                 </p>
+            </div>
+        </section>
+
+        <!-- Adding new section container for skills; copeied experiences for testing -->
+        <section class="skills-container" id="skills">
+            <div class="skills">
+                <h2>My Personal Tech Stack</h2>
+                {% block skills %} <!-- pass SVG of skills through respective pages -->
+
+                {% endblock %}
             </div>
         </section>
 
