--- a/app/static/styles/main.css
+++ b/app/static/styles/main.css
@@ -237,8 +237,16 @@ section {
     transition: color 0.5s ease 0s;
 }
 
-.intro span:hover {
+.intro, #noah span:hover {
     color: cyan;
+}
+
+.intro, #juan span:hover {
+    color: rgb(194, 70, 231);
+}
+
+.intro, #malik span:hover {
+    color: rgb(252, 158, 34);
 }
 
 .socials {
