Added particle background to home page

--- a/app/templates/home.html
+++ b/app/templates/home.html
@@ -21,6 +21,7 @@
 </head>
 
 <body>
+    <div id="particles-js"></div>
     <header class="nav-bar">
         <div class="nav-logo">
             <a href="/">
@@ -59,5 +60,8 @@
     </div>
 
 </body>
+
+<script defer src="../static/particles.js"></script>
+<script defer src="../static/launch.js"></script>
 
 </html>
