--- a/app/static/styles/home.css
+++ b/app/static/styles/home.css
@@ -20,9 +20,7 @@ button {
     font-family: 'Share Tech', sans-serif;
 }
 
-body {  /* A test image, maybe keep, maybe scrap*/
-    background-image: url('/static/img/home-background.jpg');
-}
+
 
 .home-text {
     color: #ffffff;
@@ -74,6 +72,14 @@ body {
     font-family: "Share Tech", serif;
     margin: 0px;
     text-align: center;
+}
+
+#particles-js { 
+    width: 100%;
+    height: 100%;
+    position: absolute; 
+    top: 0;
+    z-index: -1; 
 }
 
 .nav-bar {
