Implemented lazy loading for each section (each section fades in as user scrolls)

--- a/app/templates/profilebase.html
+++ b/app/templates/profilebase.html
@@ -190,8 +190,10 @@
         </section>
 
         <section class="map" id="locations">
-            <h1 class="map-label">Where I've Been</h1>
-            <div id="map"></div>
+            <div class="load-map">
+                <h1 class="map-label">Where I've Been</h1>
+                <div id="map"></div>
+            </div>
         </section>
     </div>
 
