--- a/app/static/styles/main.css
+++ b/app/static/styles/main.css
@@ -542,7 +542,10 @@ Projects Section Styling
     transition: all 1s ease;
 }
 
-/* Map Styling */
+/* 
+//////////////////////////////////////////////////////////////////////////////
+Map Styling 
+*/
 .map {
     position: relative;
     display: flex;
@@ -552,8 +555,8 @@ Projects Section Styling
 }
 
 #map {
-    height: 70%;
-    width: 80%;
+    height: 100%;
+    width: 100%;
     margin: 0 auto;
     z-index: 1;
 }
@@ -564,4 +567,24 @@ Projects Section Styling
     margin: 0;
     padding: 10px 0;
     text-align: center;
+}
+
+.load-map {
+    height: 70%;
+    width: 80%;
+}
+
+
+/* 
+//////////////////////////////////////////////////////////////////////////////
+Projects Section Styling
+*/
+
+section div {
+    transition: transform 1s ease, opacity 1s ease;
+}
+
+section div.hide-card {
+    opacity: 0;
+    transform: translateY(20px);
 }
